--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,9 @@
     <title>Historical Places In India</title>
     <link
       rel="icon"
-      href="C:\miniproject\favicon.ico"
+      href="miniproject\favicon.ico"
     />
-    <link rel="stylesheet" href="C:\Users\USRE\Desktop\Miniproject@academor\Girish.css" >
+    <link rel="stylesheet" href="Girish.css" >
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +21,7 @@
     >
   </head>
 
-  <body background="file:///C:/miniproject/background.webp">
+  <body background="background.webp">
       <nav class="navbar bg-dark border-bottom border-bottom-dark"
            data-bs-theme="dark"><hr class="hr new" /hr>
           <div class="container-fluid">
